--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">PAS</string>
+    <string name="default_web_client_id">740734489847-1qcdpcss37vi0m0ido5huci1gc5e6fan.apps.googleusercontent.com</string>
 </resources>
